# 2026-Epita-Intelligence-Symbolique

./: README.md
M3-Regression-symbolique/: README.md  presentation.pptx  pyproject.toml
M3-Regression-symbolique/src/m3_symbolic_regression/: __init__.py  baselines.py  datasets.py  metrics.py  plotting.py  run_experiments.py  symbolic.py
M3-Regression-symbolique/tests/: test_core.py
M8-Arthur-Amaury/: .gitignore  README.md  app.py  benchmarks.json  import_putnam.py  research_benchmarks.json
M8-Arthur-Amaury/benchmarks/: minif2f_subset.json
M8-Arthur-Amaury/m8_lean_agent/: __init__.py  benchmarks.py  engine.py  models.py  providers.py  research_import.py  verifier.py
M8-Arthur-Amaury/m8_proof_agent/: benchmarks.py  graph.py  models.py  providers.py  replay.py  verifier.py
M8-Arthur-Amaury/static/: app.js  index.html  style.css
M8-Arthur-Amaury/tests/: test_app_api.py  test_benchmarks.py  test_core.py  test_graph.py  test_minif2f_v2.py  test_models.py  test_providers.py  test_replay.py  test_verifier.py
M8-Arthur-Amaury/traces/: sample_success.json
groupe-H3-Graphes-de-connaissances-et-reponse-a-des-questions/: H3_KGQA.pptx  H3_KGQA_Demo.ipynb  README.md
